badge alignment update (#11)
* updated hadoop.html

* hadoop.html final

* major changes

* removed hero-bg, site.webmanifest

* Dev to qa (#7)

* added README.md

* databricks badge added

* badge alignment update (#9)

* added README.md

* databricks badge added

* alignment update

* badge alignment update (#10)

* added README.md

* databricks badge added

* alignment update

* alignment

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <title>Rijul Sahu</title>
   <meta
-    content="Rijul Sahu - Cloud Solutions Architect & Big Data Expert. AWS certified professional specializing in Hadoop, Python, Alteryx, and enterprise analytics solutions."
+    content="Rijul Sahu - Aspiring Cloud Solutions Architect, Lead Data Engineer & Big Data Expert. Databricks certified Data Engineer Associate & AWS certified professional specializing in big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform."
     name="description">
   <meta
-    content="cloud architect, big data, hadoop, python, alteryx, aws, data analytics, machine learning, terraform, exasol"
+    content="cloud solutions architect, aspiring solutions architect, lead data engineer, data engineer, big data engineer, aws certified, databricks certified, hadoop, spark, databricks, snowflake, python, dbt, data build tool, etl, data pipeline, data analytics, big data, machine learning, aws cloud platform, terraform, infrastructure as code, ci cd, github workflows, data warehousing, data transformation, cloud architecture, enterprise data solutions, scalable analytics, distributed systems, apache spark, apache pig, hive, exasol, alteryx, data integration, business intelligence, kellanova, digital transformation, cloud migration, data governance, real time analytics"
     name="keywords">
 
   <!-- Favicons -->
@@ -149,21 +149,17 @@
           <div class="row" style="text-align: center;">
             <div class="col-lg-10" style="margin: auto;">
               <h3>
-                <p style="text-align: left;">Hello, I'm Rijul. I help enterprises and organizations drive digital transformation.</p>
+                <p style="text-align: center;">Hello, I'm Rijul. I help enterprises and organizations drive digital transformation.</p>
               </h3><br>
               <h5>
-                <p style="text-align: left;">Lead Data Engineer with over 14 years of experience driving complex data transformations, building scalable analytics platforms, and leading high-performing engineering teams. Proven ability to architect and implement cloud-based data ecosystems, automate CI/CD deployments, and translate business needs into robust technical solutions. Currently seeking to leverage my comprehensive data expertise and cross-team collaboration skills to transition into a Solutions Architect role.
+                <p style="text-align: center;">My technical expertise spans the full stack of data analytics and automation, including distributed big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform.
                 </p>
               </h5> <br>
               <h5>
-                <p style="text-align: left;">My technical expertise spans the full stack of data analytics and automation, including distributed big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform.
-                </p>
-              </h5> <br>
-              <h5>
-                <p style="text-align: left;">When I'm not working on technology, I am focused on learning and upskilling myself in new technical and business skills.</p>
+                <p style="text-align: center;">When I'm not working on technology, I am focused on learning and upskilling myself in new technical and business skills.</p>
               </h5><br>
               <h4>
-                <p style="text-align: left;">I am on <a href="https://www.linkedin.com/in/rijul-sahu-242b59129/"
+                <p style="text-align: center;">I am on <a href="https://www.linkedin.com/in/rijul-sahu-242b59129/"
                     target="_blank">Linkedin</a>,
                   and you can also find me on <a href="https://stackoverflow.com/users/2831370/rijul-sahu"
                     target="_blank">
@@ -181,8 +177,15 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Resume file is attached below</p>
-          <a href="assets/Rijul_Sahu.pdf" target="_blank">Resume</a>
+          <h5>
+                <p style="text-align: center;">Lead Data Engineer with over 14 years of experience driving complex data transformations, building scalable analytics platforms, and leading high-performing engineering teams. Proven ability to architect and implement cloud-based data ecosystems, automate CI/CD deployments, and translate business needs into robust technical solutions. Currently seeking to leverage my comprehensive data expertise and cross-team collaboration skills to transition into a Solutions Architect role.
+                </p>
+          </h5> <br>
+          <div class="resume-download">
+            <a href="assets/Rijul_Sahu.pdf" target="_blank" class="resume-link">
+              📋 Click to download professional resume
+            </a>
+          </div>
         </div>
 
       </div>
@@ -215,8 +218,7 @@
                 <a href="projects/Topic_Modeling.html"><img src="assets/img/topic_modelling.png" alt=""
                     style="float:left;width:100%;height:100%;object-fit:cover;"></a>
               </div>
-              <h4><a href="projects/Topic_Modeling.html">Topic Modelling and Text Classification Machine Learning
-                  Solution</a></h4>
+              <h4><a href="projects/Topic_Modeling.html">Topic Modelling and Text Classification Machine Learning Solution</a></h4>
             </div>
           </div>
 
@@ -238,7 +240,7 @@
                   <img src="assets/img/exasol.png" alt="" style="float:left;width:100%;height:100%;object-fit:cover;">
                 </a>
               </div>
-              <h4><a href="projects/Exasol.html">Exasol – A CRM Analytics Solution</a></h4>
+              <h4><a href="projects/Exasol.html">Exasol - CRM Analytics Automation Solution</a></h4>
             </div>
           </div>
 
@@ -248,7 +250,7 @@
                 <a href="projects/Terraform.html"><img src="assets/img/Terraform.png" alt=""
                     style="float:left;width:100%;height:100%;object-fit:cover;"></a>
               </div>
-              <h4><a href="projects/Terraform.html">Terraform template for deploying VPC, Subnets, ec2, RDS & more</a>
+              <h4><a href="projects/Terraform.html">Terraform Template for Deploying VPC, Subnets, EC2, RDS & More</a>
               </h4>
             </div>
           </div>
