resume download button fix

--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
       color: white;
       text-decoration: none;
     }
+    
+    /* Mobile responsive adjustments */
+    @media (max-width: 480px) {
+      .resume-link {
+        padding: 10px 20px;
+        font-size: 14px;
+        max-width: 90%;
+        word-wrap: break-word;
+      }
+    }
   </style>
 
 </head>
@@ -212,7 +222,7 @@
           </h5> <br>
           <div class="resume-download">
             <a href="assets/Rijul_Sahu.pdf" target="_blank" class="resume-link">
-              📋 Click to download professional resume
+              📋 Click to download resume
             </a>
           </div>
         </div>
