--- a/index.html
+++ b/index.html
@@ -147,6 +147,109 @@
       }
     }
     
+    /* Contact Section Styling */
+    .contact .info {
+      padding: 30px;
+      background: #fff;
+      width: 100%;
+      box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    .contact .info i {
+      font-size: 20px;
+      color: #0563bb;
+      float: left;
+      width: 44px;
+      height: 44px;
+      background: #eef7ff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .contact .info h4 {
+      padding: 0 0 0 60px;
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 5px;
+      color: #45505b;
+    }
+
+    .contact .info p {
+      padding: 0 0 0 60px;
+      margin-bottom: 0;
+      font-size: 14px;
+      color: #728394;
+    }
+
+    .contact .info .address, .contact .info .linkedin, .contact .info .stack-overflow {
+      margin-top: 40px;
+    }
+
+    .contact .php-email-form {
+      width: 100%;
+      padding: 30px;
+      background: #fff;
+      box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    .contact .php-email-form .form-group {
+      padding-bottom: 8px;
+    }
+
+    .contact .php-email-form input, 
+    .contact .php-email-form textarea {
+      border-radius: 4px;
+      box-shadow: none;
+      font-size: 14px;
+      border: 1px solid #dce1e6;
+    }
+
+    .contact .php-email-form input:focus, 
+    .contact .php-email-form textarea:focus {
+      border-color: #0563bb;
+    }
+
+    .contact .php-email-form button[type="submit"] {
+      background: #0563bb;
+      border: 0;
+      padding: 10px 35px;
+      color: #fff;
+      transition: 0.4s;
+      border-radius: 50px;
+    }
+
+    .contact .php-email-form button[type="submit"]:hover {
+      background: #0678e3;
+    }
+
+    .contact .php-email-form .loading {
+      display: none;
+      background: #fff;
+      text-align: center;
+      padding: 15px;
+    }
+
+    .contact .php-email-form .error-message {
+      display: none;
+      color: #fff;
+      background: #ed3c0d;
+      text-align: left;
+      padding: 15px;
+      font-weight: 600;
+    }
+
+    .contact .php-email-form .sent-message {
+      display: none;
+      color: #fff;
+      background: #18d26e;
+      text-align: center;
+      padding: 15px;
+      font-weight: 600;
+    }
+    
     /* Mobile responsive adjustments */
     @media (max-width: 480px) {
       .resume-link {
@@ -164,6 +267,14 @@
         width: 98% !important;
         max-height: 70vh !important;
         margin: 10px auto !important;
+      }
+
+      .contact .info {
+        padding: 20px;
+      }
+
+      .contact .php-email-form {
+        padding: 20px;
       }
     }
   </style>
@@ -342,6 +453,50 @@
         </div>
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact Me</h2>
+          <h5>
+            <p style="text-align: center;">Feel free to reach out to me for any inquiries, collaborations, or opportunities. I look forward to connecting with you!</p>
+          </h5>
+        </div>
+
+        <div class="row mt-1 justify-content-center">
+
+          <div class="col-lg-8 mt-5 mt-lg-0">
+            <form action="https://formspree.io/f/your-formspree-id" method="POST" class="php-email-form">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                </div>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                </div>
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Contact Section -->
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
