--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         <div class="row mt-1 justify-content-center">
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="https://formspree.io/f/your-formspree-id" method="POST" class="php-email-form">
+            <form action="https://formspree.io/f/xblqjpjy" method="POST" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
