refactor(portfolio): Remove email page and update navigation to contact section

--- a/404.html
+++ b/404.html
@@ -145,8 +145,8 @@
           <a href="https://stackoverflow.com/users/2831370/rijul-sahu" target="_blank" class="stack">
             <i class="bx bxl-stack-overflow"></i>
           </a>
-          <a href="email.html" title="Email Details">
-            <i class="bx bx-mail-send"></i>
+          <a href="https://github.com/rijulsahu" target="_blank" class="github" title="GitHub Profile">
+            <i class="bx bxl-github"></i>
           </a>
         </div>
       </div>
