--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#services"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+        <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -323,8 +324,8 @@
               class="bx bxl-linkedin"></i></a>
           <a href="https://stackoverflow.com/users/2831370/rijul-sahu" target="_blank" class="stack"><i
               class="bx bxl-stack-overflow"></i></a>
-          <a href="email.html" data-vbtype="iframe" class="venobox" title="Email Details"><i
-              class="bx bx-mail-send"></i></a>
+          <a href="https://github.com/rijulsahu" target="_blank" class="github"><i
+              class="bx bxl-github"></i></a>
         </div>
       </div>
     </div>
@@ -341,23 +342,57 @@
           <br>
           <div class="row" style="text-align: center;">
             <div class="col-lg-10" style="margin: auto;">
-              <h3>
-                <p style="text-align: center;">Hello, I'm Rijul. I help enterprises and organizations drive digital transformation.</p>
-              </h3><br>
-              <h5>
-                <p style="text-align: center;">My technical expertise spans the full stack of data analytics and automation, including distributed big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform.
+              <h3 style="font-weight:600;">
+                Building cloud-first data platforms that turn raw volume into usable insight.
+              </h3>
+              <div style="margin:25px auto;max-width:900px;">
+                <p style="font-size:16px;line-height:1.5;color:#444;">
+                  I'm a Lead Data Engineer (14+ yrs) progressing toward Cloud Solutions Architecture. I design and deliver
+                  scalable analytics ecosystems across AWS, Databricks, Hadoop, Snowflake, Terraform & dbt. Always with an
+                  automation-first, cost-aware mindset.
                 </p>
-              </h5> <br>
-              <h5>
-                <p style="text-align: center;">When I'm not working on technology, I am focused on learning and upskilling myself in new technical and business skills.</p>
-              </h5><br>
-              <h4>
-                <p style="text-align: center;">I am on <a href="https://www.linkedin.com/in/rijul-sahu-242b59129/"
-                    target="_blank">Linkedin</a>,
-                  and you can also find me on <a href="https://stackoverflow.com/users/2831370/rijul-sahu"
-                    target="_blank">
-                    Stack Overflow</a>.</p>
-              </h4>
+              </div>
+              <div class="about-metrics" style="display:flex;flex-wrap:wrap;justify-content:center;gap:18px;margin:10px 0 30px 0;">
+                <div class="metric-pill">6B+ pricing records processed (Hadoop)</div>
+                <div class="metric-pill">83% processing time reduction</div>
+                <div class="metric-pill">91% faster CRM reporting (Exasol)</div>
+                <div class="metric-pill">98% manual effort eliminated (Python + Alteryx)</div>
+                <div class="metric-pill">85%+ ML classification accuracy</div>
+              </div>
+              <div class="about-columns" style="display:flex;flex-wrap:wrap;justify-content:center;gap:40px;text-align:left;margin:0 auto 25px auto;max-width:1000px;">
+                <div class="about-col" style="flex:1 1 240px;min-width:240px;">
+                  <h5 style="font-weight:600;">Core Focus</h5>
+                  <ul class="about-list">
+                    <li>Data & analytics platform architecture</li>
+                    <li>High-volume ingestion & transformation (Spark/dbt)</li>
+                    <li>Performance tuning & cost optimization</li>
+                    <li>Infrastructure as Code (Terraform)</li>
+                  </ul>
+                </div>
+                <div class="about-col" style="flex:1 1 240px;min-width:240px;">
+                  <h5 style="font-weight:600;">Strengths</h5>
+                  <ul class="about-list">
+                    <li>Cross-team technical leadership</li>
+                    <li>CI/CD workflow automation (GitHub)</li>
+                    <li>Data quality & governance mindset</li>
+                    <li>Clear stakeholder communication</li>
+                  </ul>
+                </div>
+                <div class="about-col" style="flex:1 1 240px;min-width:240px;">
+                  <h5 style="font-weight:600;">Current Growth</h5>
+                  <ul class="about-list">
+                    <li>Cloud solution architecture patterns</li>
+                    <li>Multi-cloud resiliency & security</li>
+                    <li>Event-driven & real-time pipelines</li>
+                    <li>Scaling ML feature stores</li>
+                  </ul>
+                </div>
+              </div>
+              <p style="font-size:15px;color:#555;max-width:800px;margin:0 auto 10px auto;">I enjoy simplifying complexity, turning fragmented data & brittle legacy systems into lean, observable, self-service platforms.</p>
+              <p style="font-size:15px;color:#555;max-width:800px;margin:0 auto 5px auto;">Open to collaboration, architecture reviews, and forward-looking data initiatives.</p>
+              <div style="margin-top:15px;">
+                <a href="#contact" class="resume-link" style="padding:10px 22px;">Get in Touch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -375,9 +410,14 @@
                 </p>
           </h5> <br>
           <div class="resume-download">
-            <a href="assets/Rijul_Sahu.pdf" target="_blank" class="resume-link">
-              📋 Click to download resume
+            <a href="assets/Rijul_Sahu.pdf" download="Rijul_Sahu.pdf" class="resume-link" aria-label="Download Rijul Sahu Resume (PDF)">
+              Download Resume
             </a>
+            <div class="resume-actions" style="margin-top:10px;">
+              <a href="assets/Rijul_Sahu.pdf" target="_blank" class="resume-preview-link" style="font-size:14px;text-decoration:none;color:#0563bb;">
+                🔍 Preview in browser
+              </a>
+            </div>
             <div class="resume-info">
               <p class="file-metadata">📅 Last updated: November 2025 | 📄 PDF Format</p>
             </div>
@@ -388,7 +428,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="services" class="services">
+    <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -506,8 +546,8 @@
               class="bx bxl-linkedin"></i></a>
           <a href="https://stackoverflow.com/users/2831370/rijul-sahu" target="_blank" class="stack"><i
               class="bx bxl-stack-overflow"></i></a>
-          <a href="email.html" data-vbtype="iframe" class="venobox" title="Email Details"><i
-              class="bx bx-mail-send"></i></a>
+          <a href="https://github.com/rijulsahu" target="_blank" class="github"><i
+              class="bx bxl-github"></i></a>
         </div>
       </div>
     </footer><!-- End Footer -->
